# aioplate

./: README.md  pyproject.toml
examples/: .env.example  plate.py
examples/src/it_works/: config.py  main.py
examples/src/it_works/middlewares/: __init__.py  sql_alchemy_repo.py
examples/src/it_works/routers/: __init__.py  bot_router.py  intro_router.py
src/aioplate/: defaults.py  entities.py  exceptions.py  framework.py  gen_types.py  init_plate.py  main.py  parser.py  utils.py
src/aioplate/extractor/: constructor.py  parser.py
src/aioplate/generator/: constructor.py  fs_factory.py  imports_utils.py  structure.py  writer.py
src/aioplate/generator/code_content/: config.py  main.py  middleware.py  router.py
src/aioplate/initial/: defaults.py  entities.py  framework.py
